--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
                     <div class="black-part-section1__building-wrapper black-part-section1__building-position">
                         <img class="black-part-section1__building" src="./images/building.webp" alt="">
                     </div>
-                    <div class="black-part-section-1__square-wrapper black-part-section-1__square-position">
+                    <div class="black-part-section1__square-wrapper black-part-section1__square-position">
                         <article class="square">
-                            <div class="black-part-section-1__h2-wrapper">
-                                <h2 class="black-part-section-1__h2 font_big text_white">PVC2 Project</h2>
+                            <div class="black-part-section1__h2-wrapper">
+                                <h2 class="black-part-section1__h2 font_big text_white">PVC2 Project</h2>
                             </div>
-                            <div class="black-part-section-1__p-wrapper">
+                            <div class="black-part-section1__p-wrapper">
                                 <p class="text_white">CC7 Europe is an independent subsidiary of CC7 (China National
                                     Chemical
                                     Engineering &
@@ -192,49 +192,49 @@
                     <div class="black-part-section1__pipes-wrapper black-part-section1__pipes-position">
                         <img class="black-part-section1__pipes" src="./images/pipes.webp" alt="">
                     </div>
-                    <div class="black-part-section-1__dark-square-wrapper black-part-section-1__dark-square-position">
-                        <article class="square square_dark black-part-section-1__dark-square">
+                    <div class="black-part-section1__dark-square-wrapper black-part-section1__dark-square-position">
+                        <article class="square square_dark black-part-section1__dark-square">
                             <div class="black-part-section1__small-header-wrapper">
                                 <h3 class="small-header text_grey font_card">Location</h3>
                             </div>
-                            <p class="text_white font_big black-part-section-1__dark-square__p">Navoiy, Uzbekistan
+                            <p class="text_white font_big black-part-section1__dark-square__p">Navoiy, Uzbekistan
                             </p>
                             <div class="black-part-section1__small-header-wrapper">
                                 <h3 class="small-header text_grey  font_card">Work scope</h3>
                             </div>
-                            <p class="text_white font_big black-part-section-1__dark-square__p">EPC</p>
+                            <p class="text_white font_big black-part-section1__dark-square__p">EPC</p>
                             <div class="black-part-section1__small-header-wrapper">
                                 <h3 class="small-header text_grey  font_card">Capacity</h3>
                             </div>
-                            <p class="text_white font_big black-part-section-1__dark-square__p">120K T/Y (PVC)</p>
+                            <p class="text_white font_big black-part-section1__dark-square__p">120K T/Y (PVC)</p>
                         </article>
                     </div>
                 </div>
             </section>
             <section class="black-part-section2 ">
                 <div class="cards-section">
-                    <div class="black-part-section-2__inner ">
-                        <div class="black-part-section-2__small-header-wrapper">
+                    <div class="black-part-section2__inner ">
+                        <div class="black-part-section2__small-header-wrapper">
                             <p class="text_500 text_grey  small-header">Working at CC7 Europe</p>
                         </div>
                         <div class="white-part-section-3__header-wrapper">
                             <h2 class="white-part-section-3__header text_purple">Empowering people</h2>
                         </div>
-                        <div class="black-part-section-2__text-wrapper">
-                            <p class="black-part-section-2__text text_white ">We embrace a highly diverse and inclusive
+                        <div class="black-part-section2__text-wrapper">
+                            <p class="black-part-section2__text text_white ">We embrace a highly diverse and inclusive
                                 organisation. An inspiring
                                 workspace where talented</p>
                         </div>
-                        <div class="black-part-section-2__button-wrapper">
-                            <a class="button black-part-section-2__button " tabindex="1">
+                        <div class="black-part-section2__button-wrapper">
+                            <a class="button black-part-section2__button " tabindex="1">
                                 <span class="button__span button__span_black"><span class="button__text">What we
                                         do</span></span>
                             </a>
                         </div>
-                        <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_1">
+                        <div class="black-part-section2__card-wrapper black-part-section2__card-wrapper_1">
                             <article class="card card1">
                                 <img class="card__img" src="" alt="">
-                                <div class="black-part-section-2__card-h3">
+                                <div class="black-part-section2__card-h3">
                                     <h3 class="text_white">
                                         Can't find job you're looking for? Apply here!
                                     </h3>
@@ -244,20 +244,20 @@
                                     studies, Pre-feed and Feed
                                     and Detailed
                                     engineering</p>
-                                <div class="black-part-section-2__card-first-subtext">
+                                <div class="black-part-section2__card-first-subtext">
                                     <p class="font_card text_white">
                                         fulltime_fixed_term
                                     </p>
                                 </div>
-                                <div class="black-part-section-2__card-p">
+                                <div class="black-part-section2__card-p">
                                     <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
                                 </div>
                             </article>
                         </div>
-                        <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_2">
+                        <div class="black-part-section2__card-wrapper black-part-section2__card-wrapper_2">
                             <article class="card card2">
                                 <img class="card__img" src="" alt="">
-                                <div class="black-part-section-2__card-h3">
+                                <div class="black-part-section2__card-h3">
                                     <h3 class="text_white">
                                         Can't find job you're looking for? Apply here!
                                     </h3>
@@ -267,20 +267,20 @@
                                     studies, Pre-feed and Feed
                                     and Detailed
                                     engineering</p>
-                                <div class="black-part-section-2__card-first-subtext">
+                                <div class="black-part-section2__card-first-subtext">
                                     <p class="font_card text_white">
                                         fulltime_fixed_term
                                     </p>
                                 </div>
-                                <div class="black-part-section-2__card-p">
+                                <div class="black-part-section2__card-p">
                                     <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
                                 </div>
                             </article>
                         </div>
-                        <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_3">
+                        <div class="black-part-section2__card-wrapper black-part-section2__card-wrapper_3">
                             <article class="card card3">
                                 <img class="card__img" src="" alt="">
-                                <div class="black-part-section-2__card-h3">
+                                <div class="black-part-section2__card-h3">
                                     <h3 class="text_white">
                                         Can't find job you're looking for? Apply here!
                                     </h3>
@@ -290,20 +290,20 @@
                                     studies, Pre-feed and Feed
                                     and Detailed
                                     engineering</p>
-                                <div class="black-part-section-2__card-first-subtext">
+                                <div class="black-part-section2__card-first-subtext">
                                     <p class="font_card text_white">
                                         fulltime_fixed_term
                                     </p>
                                 </div>
-                                <div class="black-part-section-2__card-p">
+                                <div class="black-part-section2__card-p">
                                     <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
                                 </div>
                             </article>
                         </div>
-                        <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_4">
+                        <div class="black-part-section2__card-wrapper black-part-section2__card-wrapper_4">
                             <article class="card card4">
                                 <img class="card__img" src="" alt="">
-                                <div class="black-part-section-2__card-h3">
+                                <div class="black-part-section2__card-h3">
                                     <h3 class="text_white">
                                         Can't find job you're looking for? Apply here!
                                     </h3>
@@ -313,15 +313,58 @@
                                     studies, Pre-feed and Feed
                                     and Detailed
                                     engineering</p>
-                                <div class="black-part-section-2__card-first-subtext">
+                                <div class="black-part-section2__card-first-subtext">
                                     <p class="font_card text_white">
                                         fulltime_fixed_term
                                     </p>
                                 </div>
-                                <div class="black-part-section-2__card-p">
+                                <div class="black-part-section2__card-p">
                                     <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
                                 </div>
                             </article>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="black-part-section3">
+                <div class="black-part-section3_inner">
+                    <div class="black-part-section3__img-wrapper">
+                        <img class="black-part-section3__img" src="./images/window.webp" alt="">
+                    </div>
+                    <div class="black-part-section3__right-block">
+                        <div class="black-part-section3__small-header-wrpapper">
+                            <p class="small-header text_grey">Be yourself</p>
+                        </div>
+                        <div class="black-part-section3__h2-wrapper">
+                            <h2 class="text_white ">Our culture</h2>
+                        </div>
+                        <div class="black-part-section3__text-wrapper">
+                            <p class="text_white font_card black-part-section3__text">A strong, diverse and vibrant
+                                culture is key to success.
+                                That’s why we
+                                create an
+                                inspiring workspace where talented
+                                people can flourish. With an open-innovation culture we encourage unique ideas and
+                                forward-thinking. At CC7 Europe
+                                everyone has the right to be themselves and express themselves.</p>
+                        </div>
+
+                        <div class="black-part-section3__text-wrapper">
+                            <p class="text_white font_card black-part-section3__text">
+                                <strong>A carefree career</strong><br />
+                                Our talented engineers come from all over the world. We help
+                                them every step of the way. From finding a home, or a
+                                school for the children, to tips for the best restaurants or gym in town. We ensure that
+                                your time at CC7 Europe starts
+                                carefree.
+
+                            </p>
+                        </div>
+                        <div class="black-part-section3__button-wrapper">
+                            <a class="button black-part-section3__button " tabindex="1">
+                                <span class="button__span button__span_black"><span class="button__text">Let`s
+                                        meet</span></span>
+                            </a>
                         </div>
                     </div>
                 </div>
