last-sect-and-footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header header_position inner">
         <div class="header__inner ">
             <div class="header__logo-wrapper">
-                <img src="" alt="логотип" class="header__logo">
+                <img src="" alt="логотип" class="header__logo logo">
             </div>
             <div class="burger">
                 <span class="burger__span1"></span>
@@ -26,13 +26,16 @@
             </div>
             <nav class="menu header__menu">
                 <ul class="menu__list header__menu-list">
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link text_purple">Home</a></li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link">About us</a></li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link">Expertise</a></li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link">Careers</a></li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link">Responsibility</a></li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link">Let's meet</a></li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link">Contact</a></li>
+                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu text_purple">Home</a>
+                    </li>
+                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">About us</a></li>
+                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Expertise</a></li>
+                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Careers</a></li>
+                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Responsibility</a>
+                    </li>
+                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Let's meet</a>
+                    </li>
+                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -90,7 +93,7 @@
             </section>
             <section class="white-part-section-3">
                 <div class="cards-section">
-                    <div class="white-part-section-3__inner cards-section">
+                    <div class="white-part-section-3__inner">
                         <div class="white-part-section-3__small-header-wrapper">
                             <p class="text_500 text_grey  small-header">What we do</p>
                         </div>
@@ -369,9 +372,77 @@
                     </div>
                 </div>
             </section>
+            <div class="black-part-section4__bg">
+                <section class="black-part-section4">
+                    <div class="black-part-section4__inner inner">
+                        <div class="black-part-section4__content-wrapper">
+                            <div class="black-part-section4__small-header-wrapper text_white">
+                                <p class="small-header">Futureproof</p>
+                            </div>
+                            <div class="black-part-section4__h2-wrapper">
+                                <h2 class="black-part-section4__h2 text_white">Responsibility</h2>
+                            </div>
+                            <div class="black-part-section4__text-wrapper">
+                                <p class="text_white black-part-section4__text font_big">Anywhere we work around the
+                                    globe, we
+                                    operate
+                                    with the highest industry standards, just as we would in Europe. Safety is
+                                    paramount and an ethical approach is non-negotiable.</p>
+                            </div>
+                            <div class="black-part-section4__button-wrapper">
+                                <a class="button black-part-section4__button " tabindex="1">
+                                    <span class="button__span button__span_black"><span class="button__text">Learn
+                                            more</span></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
-
     </main>
+    <footer>
+        <div class="footer">
+            <div class="footer__inner">
+                <div class="footer__logo-wrapper">
+                    <img src="" alt="логотип" class="footer__logo logo">
+                </div>
+                <div class="footer__ul1-wrapper">
+                    <ul class="footer_ul">
+                        <li class="footer__li text_white "><strong>CC7 Europe B.V.</strong></li>
+                        <li class="footer__li text_white ">WTC The Hague</li>
+                        <li class="footer__li text_white ">Tower E - 14th Floor</li>
+                        <li class="footer__li text_white ">Prinses Beatrixlaan 582</li>
+                        <li class="footer__li text_white ">2595 BM The Hague</li>
+                        <li class="footer__li text_white ">The Netherlands</li>
+                    </ul>
+                </div>
+                <div class="footer__ul2-wrapper">
+                    <ul class="footer_ul">
+                        <li class="footer__li text_white "><strong>Contact</strong></li>
+                        <li class="footer__li text_white "><a href="#" class="link text_white">+31 (0)70 250 4600</a>
+                        </li>
+                        <li class="footer__li text_white "><a href="#" class="link text_white">info@cc7europe.com</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__ul3-wrapper">
+                    <ul class="footer_ul">
+                        <li class="footer__li text_white "><a href="#"
+                                class="link text_white"><strong>Projects</strong></a></li>
+                        <li class="footer__li text_white "><a href="#" class="link text_white"><strong>Management
+                                    team</strong></a></li>
+                        <li class="footer__li text_white "><a href="#"
+                                class="link text_white"><strong>Careers</strong></a></li>
+                        <li class="footer__li text_white "><a href="#" class="link text_white"><strong>Let's
+                                    meet</strong></a></li>
+                        <li class="footer__li text_white "><a href="#"
+                                class="link text_white"><strong>cnce7.com</strong></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 <script src="./styles/components/header/menu-burger/menu-burger.js"></script>
