--- a/index.html
+++ b/index.html
@@ -403,12 +403,21 @@
     </main>
     <footer>
         <div class="footer">
-            <div class="footer__inner">
+            <div class="footer__spoiler-wrapper">
+                <div class="spoiler">
+                    <div class="check-mark">
+                        <i class="check-mark__up"></i>
+                        <i class="check-mark__down"></i>
+                    </div>
+                    <p class="text_white font_big spoiler__p">CC7 Europe B.V.</p>
+                </div>
+            </div>
+            <div class="footer__inner hidden">
                 <div class="footer__logo-wrapper">
                     <img src="" alt="логотип" class="footer__logo logo">
                 </div>
                 <div class="footer__ul1-wrapper">
-                    <ul class="footer_ul">
+                    <ul class="footer__ul">
                         <li class="footer__li text_white "><strong>CC7 Europe B.V.</strong></li>
                         <li class="footer__li text_white ">WTC The Hague</li>
                         <li class="footer__li text_white ">Tower E - 14th Floor</li>
@@ -418,16 +427,17 @@
                     </ul>
                 </div>
                 <div class="footer__ul2-wrapper">
-                    <ul class="footer_ul">
+                    <ul class="footer__ul">
                         <li class="footer__li text_white "><strong>Contact</strong></li>
-                        <li class="footer__li text_white "><a href="#" class="link text_white">+31 (0)70 250 4600</a>
+                        <li class="footer__li text_white "><a href="#" class="link text_white">+31 (0)70 250
+                                4600</a>
                         </li>
                         <li class="footer__li text_white "><a href="#" class="link text_white">info@cc7europe.com</a>
                         </li>
                     </ul>
                 </div>
                 <div class="footer__ul3-wrapper">
-                    <ul class="footer_ul">
+                    <ul class="footer__ul">
                         <li class="footer__li text_white "><a href="#"
                                 class="link text_white"><strong>Projects</strong></a></li>
                         <li class="footer__li text_white "><a href="#" class="link text_white"><strong>Management
@@ -441,11 +451,13 @@
                     </ul>
                 </div>
             </div>
+
         </div>
     </footer>
 </body>
 
 <script src="./styles/components/header/menu-burger/menu-burger.js"></script>
 <script src="./styles/main.js"></script>
+<script src="./styles/components/footer/footer.js"></script>
 
 </html>
