--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 </div>
             </section>
-            <section class="white-part-section-2">
+            <section class="white-part-section-2" id="back-to-top__trigger">
                 <div class="white-part-section-2__inner inner">
                     <div class="white-part-section-2__p-wrapper">
                         <div class="white-part-section-2__indentation"></div>
@@ -406,8 +406,7 @@
             <div class="footer__spoiler-wrapper">
                 <div class="spoiler">
                     <div class="check-mark">
-                        <i class="check-mark__up"></i>
-                        <i class="check-mark__down"></i>
+                        <span class="check-mark__line"></span>
                     </div>
                     <p class="text_white font_big spoiler__p">CC7 Europe B.V.</p>
                 </div>
@@ -451,9 +450,15 @@
                     </ul>
                 </div>
             </div>
-
         </div>
     </footer>
+    <a href="#top" id="back-to-top" class="back-to-top back-to-top_hidden" title="Back to top">
+        <div class="back-to-top__check-mark-wrapper">
+            <div class="check-mark">
+                <span class="check-mark__line"></span>
+            </div>
+        </div>
+    </a>
 </body>
 
 <script src="./styles/components/header/menu-burger/menu-burger.js"></script>
