--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
             </div>
             <nav class="menu header__menu">
                 <ul class="menu__list header__menu-list">
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu text_purple">Home</a>
+                    <li class="menu__li"><a href="#"
+                            class="menu__link font_500 font_menu text_white text_purple">Home</a>
                     </li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">About us</a></li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Expertise</a></li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Careers</a></li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Responsibility</a>
+                    <li class="menu__li"><a href="#" class="menu__link font_500 font_menu text_white">About us</a></li>
+                    <li class="menu__li"><a href="#" class="menu__link font_500 font_menu text_white">Expertise</a></li>
+                    <li class="menu__li"><a href="#" class="menu__link font_500 font_menu text_white">Careers</a></li>
+                    <li class="menu__li"><a href="#" class="menu__link font_500 font_menu text_white">Responsibility</a>
                     </li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Let's meet</a>
+                    <li class="menu__li"><a href="#" class="menu__link font_500 font_menu text_white">Let's meet</a>
                     </li>
-                    <li class="menu__li"><a href="#" class="menu__link header__menu-link font_menu">Contact</a></li>
+                    <li class="menu__li"><a href="#" class="menu__link font_500 font_menu text_white">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -95,7 +96,7 @@
                 <div class="cards-section">
                     <div class="white-part-section-3__inner">
                         <div class="white-part-section-3__small-header-wrapper">
-                            <p class="text_500 text_grey  small-header">What we do</p>
+                            <p class="font_500 text_grey ">What we do</p>
                         </div>
                         <div class="white-part-section-3__header-wrapper">
                             <h2 class="white-part-section-3__header text_purple">EPC+</h2>
@@ -160,7 +161,7 @@
                                 variety of opportunities to utilize your
                                 creativity</p>
                             <div class="white-part-section-3__small-header-wrapper">
-                                <p class="text_500 text_grey  small-header">Maryam Zarei - Senior Process Engineer
+                                <p class="font_500 text_grey ">Maryam Zarei - Senior Process Engineer
                                 </p>
                             </div>
                         </article>
@@ -218,7 +219,7 @@
                 <div class="cards-section">
                     <div class="black-part-section2__inner ">
                         <div class="black-part-section2__small-header-wrapper">
-                            <p class="text_500 text_grey  small-header">Working at CC7 Europe</p>
+                            <p class="font_500 text_grey ">Working at CC7 Europe</p>
                         </div>
                         <div class="white-part-section-3__header-wrapper">
                             <h2 class="white-part-section-3__header text_purple">Empowering people</h2>
@@ -335,7 +336,7 @@
                         <img class="black-part-section3__img" src="./images/window.webp" alt="">
                     </div>
                     <div class="black-part-section3__right-block">
-                        <div class="black-part-section3__small-header-wrpapper">
+                        <div class="black-part-section3__small-header-wrapper">
                             <p class="small-header text_grey">Be yourself</p>
                         </div>
                         <div class="black-part-section3__h2-wrapper">
